Fixed search-popup not showing

--- a/backend/web/static/retromat.css
+++ b/backend/web/static/retromat.css
@@ -274,7 +274,6 @@
     }
 
     .popup--search {
-display: none;
         margin-left: -220px
     }
 
